[tool.poetry]
name = "prostatex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytorch-lightning = "^1.4.6"
torchmetrics = "^0.5.1"
wandb = "^0.12.1"
torchvision = "^0.10.0"
jupyter = "^1.0.0"
jupyter-http-over-ws = "^0.0.8"
h5py = "^3.4.0"
sklearn = "^0.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
